--- a/pair-pm/qwen2.yaml
+++ b/pair-pm/qwen2.yaml
@@ -16,7 +16,9 @@ datasets:
 warmup_steps: 40
 val_set_size: 0.0
 output_dir: /data1/WM_workspace/checkpoints/qwen2-1.5b-bs128_lr1e-5
-#wandb_project: preference-models
+
+wandb_project: preference-models
+wandb_model: online
 #wandb_entity: domain-generalization
 wandb_watch:
 wandb_name: "qwen2-1.5b_bs128_lr1e-5"
