--- a/pair-pm/gemma-2b-it.yaml
+++ b/pair-pm/gemma-2b-it.yaml
@@ -1,4 +1,4 @@
-base_model: google/gemma-2b-it
+base_model: "/data1/WM_workspace/checkpoints/gemma-2b-it/"
 model_type: AutoModelForCausalLM
 tokenizer_type: AutoTokenizer
 
@@ -7,7 +7,7 @@ load_in_4bit: false
 strict: false
 
 datasets:
-  - path: RLHFlow/pair-preference-dataset-mix1
+  - path: "/data1/WM_workspace/datasets/process-safe/"
     conversation: gemma
     type: sharegpt.load_ultrachat
     split: "train"
@@ -15,11 +15,13 @@ datasets:
 
 warmup_steps: 40
 val_set_size: 0.0
-output_dir: ./pm_models/gemma-2b-it_bs128_lr1e-5
-#wandb_project: preference-models
+output_dir: /data1/WM_workspace/checkpoints/gemma-2b-bs128_lr1e-5
+
+wandb_project: preference-models
+wandb_model: online
 #wandb_entity: domain-generalization
 wandb_watch:
-wandb_name: "gemma-2b-it_bs128_lr1e-5"
+wandb_name: "gemma-2b_bs128_lr1e-5"
 #_response_only
 wandb_log_model:
 
@@ -27,7 +29,7 @@ train_on_inputs: false
 
 save_safetensors: true
 #noisy_embedding_alpha: 10.0 # default for sharegpt type
-dataset_prepared_path: ~/data/preference-models/last_run_prepared
+dataset_prepared_path: "/data1/WM_workspace/datasets/process-safe/"
 
 
 dataset_processes: 48
@@ -41,13 +43,11 @@ adapter:
 lora_model_dir:
 
 
-
-
 gradient_checkpointing: false
 
 #warmup_ratio: 0.1
-gradient_accumulation_steps: 8
-micro_batch_size: 2
+gradient_accumulation_steps: 16
+micro_batch_size: 1
 num_epochs: 1
 optimizer: adamw_torch_fused
 lr_scheduler: cosine
@@ -79,7 +79,7 @@ debug:
 
 
 ddp: #true
-deepspeed: #deepspeed/zero1.json # multi-gpu only
+deepspeed: /data1/WM_workspace/RLHF-Reward-Modeling/deepspeed_configs/deepspeed_1.json # multi-gpu only
 
 fsdp:
 fsdp_config:
